# ai-masters-2025-chat-bot

./: .env.example  .gitignore  Makefile  README.md  config.py  main.py  parse_data.py  pyproject.toml  requirements.txt  scripts.py
bot/: __init__.py  main.py
handlers/: __init__.py  user_handlers.py
models/: __init__.py  database.py
parsers/: __init__.py  itmo_parser.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_data.json
tests/integration/: test_bot_handlers.py
tests/unit/: test_ai_assistant.py  test_database.py  test_parser.py
utils/: __init__.py  ai_assistant.py
